# dymock

./: .gitignore  AGENTS.md  README.md  cli.py  invalid_spec.json  main.py  pyproject.toml  pytest.ini
src/models/: base_struct.py  calback_object.py  callback_object.py  component_object.py  contact_object.py  discriminator_object.py  encoding_object.py  example_object.py  external_document_object.py  external_documentation_object.py  header_object.py  info_object.py  license_object.py  link_object.py  media_type_object.py  oauth_flows_object.py  open_api_object.py  operation_object.py  parameter_object.py  path_item_object.py  paths_object.py  reference_object.py  request_body_body.py  request_body_object.py  response_object.py  responses_object.py  schema_object.py  security_object.py  security_scheme_object.py  server_object.py  server_variable_object.py  tag_object.py
src/service/: server.py
src/templates/: test.json  test.yaml
src/utils/: config.py  decoder.py  docoder.py  mock_data_generator.py  open_api_parser.py
tests/: test_parser.py
