[project]
name = "dymock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.11",
    "click>=8.1.8",
    "faker>=33.3.1",
    "fastapi>=0.115.6",
    "msgspec>=0.19.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.2",
    "uvicorn>=0.34.0",
]
